--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <div class="container mx-auto px-6 text-center">
                 <div class="w-full overflow-hidden mb-8">
                     <img src="https://media-public.canva.com/FnqPo/MAEqEXFnqPo/1/tl.png" alt=""
-                        class="block w-full h-full object-cover " aria-hidden="true" />
+                        class="block w-full h-full object-cover filter grayscale" aria-hidden="true" />
                 </div>
 
                 <div data-aos="zoom-in-up" data-aos-duration="900">
@@ -525,7 +525,7 @@
                 <!-- Bottom section (divider flipped) -->
                 <div class="w-full overflow-hidden mt-8">
                     <img src="https://media-public.canva.com/FnqPo/MAEqEXFnqPo/1/tl.png" alt=""
-                        class="block w-full h-full object-cover rotate-180" aria-hidden="true" />
+                        class="block w-full h-full object-cover rotate-180 filter grayscale" aria-hidden="true" />
                 </div>
             </div>
         </header>
