--- a/index.html
+++ b/index.html
@@ -999,11 +999,13 @@
                     if (type === "back") {
                         square.style.backgroundImage = `url('https://media-public.canva.com/3gWYg/MAFB-W3gWYg/1/tl.png')`;
                         square.style.opacity = "0.4";
+                        square.style.filter = "grayscale(100%)";
                         const rotation = side === "left" ? -8 : 8;
                         square.style.transform = `rotate(${rotation}deg)`;
                     } else {
                         square.style.backgroundImage = `url('https://media-public.canva.com/EalrA/MAEchNEalrA/1/tl.png')`;
                         square.style.opacity = "0.9";
+                        square.style.filter = "grayscale(100%)";
                         square.style.transform = "none";
                     }
                     square.style.top = `${topPos}%`;
