--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
     <!-- Main Content (will be blurred when modal is open) -->
     <div id="mainContent" :class="{'blur-content': showModal}"
-        class="relative z-[10] px-5 py-[120px] max-w-[700px] mx-auto text-center">
+        class="relative z-[10] px-5 max-w-[700px] mx-auto text-center">
         <!-- HERO -->
         <header class="min-h-screen min-h-[100dvh] flex items-center justify-center">
             <div class="container mx-auto px-6 text-center">
