--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                     <h1 class="text-5xl sm:text-7xl md:text-8xl font-mrsdelafield text-secondary-dark">
                         Upacara Metatah
                     </h1>
-                    <p class="my-3 text-3xl text-gray-700">
+                    <p class="my-3 text-xl md:text-3xl text-gray-700">
                         Yth. Bapak/Ibu/Saudara/i
                     </p>
                     <p class="mt-2 text-sm text-gray-500 max-w-xl mx-auto">
