--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         "secondary-light": "#9ca3af", // gray-400
                         "secondary-dark": "#374151",  // gray-700
                         "text-primary": "#374151",    // gray-700
-                        "accent": "rgba(230, 215, 186, 0.4)", // gray-600 @ 0.2
+                        "accent": "rgba(107, 114, 128, 0.2)", // gray-600 @ 0.2
                     },
                 },
             },
@@ -60,27 +60,6 @@
         html,
         body {
             overflow-x: hidden;
-            overscroll-behavior-x: none;
-            touch-action: pan-y;
-            scrollbar-gutter: stable both-edges;
-        }
-
-        /* Prefer clipping when supported to eliminate horizontal scroll roots on mobile */
-        @supports (overflow-x: clip) {
-            html,
-            body {
-                overflow-x: clip;
-            }
-        }
-
-        /* Ensure app content never causes horizontal scrolling on mobile */
-        #mainContent {
-            overflow-x: hidden;
-        }
-        @supports (overflow-x: clip) {
-            #mainContent {
-                overflow-x: clip;
-            }
         }
         :root {
             /* Theme colors mapped to CSS variables for semantic use */
@@ -184,13 +163,13 @@
             }
 
             .back-layer .square {
-                width: clamp(200px, 55vw, 520px);
-                height: clamp(200px, 55vw, 520px);
+                width: clamp(140px, 35vw, 280px);
+                height: clamp(140px, 35vw, 280px);
             }
 
             .front-layer .square {
-                width: clamp(160px, 42vw, 380px);
-                height: clamp(160px, 42vw, 380px);
+                width: clamp(90px, 28vw, 200px);
+                height: clamp(90px, 28vw, 200px);
             }
         }
 
@@ -253,12 +232,11 @@
             position: relative;
             /* Robust viewport breakout (prevents overflow and centers content) */
             left: 50%;
+            right: 50%;
             /* Fallbacks for older browsers */
             width: 100vw;
             margin-left: -50vw;
             margin-right: -50vw;
-            /* Prevent tiny horizontal scroll due to subpixel rounding on mobile */
-            overflow-x: hidden;
         }
 
         /* Prefer dynamic viewport units when supported to avoid double scrollbars */
@@ -267,22 +245,6 @@
                 width: 100dvw;
                 margin-left: -50dvw;
                 margin-right: -50dvw;
-            }
-        }
-
-        /* Prefer clipping when supported to avoid creating a new formatting context */
-        @supports (overflow-x: clip) {
-            .full-width-accent {
-                overflow-x: clip;
-            }
-        }
-
-        /* Use stable viewport units where supported (Safari/iOS) */
-        @supports (width: 100svw) {
-            .full-width-accent {
-                width: 100svw;
-                margin-left: -50svw;
-                margin-right: -50svw;
             }
         }
 
@@ -317,7 +279,6 @@
             width: 100%;
             height: 100px;
             overflow: hidden;
-            bottom: 0;
         }
 
         .full-width-accent::after::after {
@@ -431,12 +392,6 @@
             max-height: none;
             overflow-y: visible;
             padding-right: 0;
-        }
-
-        /* Prevent long messages from causing horizontal scroll on mobile */
-        .comments-container p {
-            overflow-wrap: anywhere;
-            word-break: break-word;
         }
 
         .comments-container::-webkit-scrollbar {
@@ -1206,4 +1161,3 @@
 </body>
 
 </html>
-
