--- a/index.html
+++ b/index.html
@@ -61,24 +61,39 @@
         body {
             overflow-x: hidden;
         }
+
         :root {
             /* Theme colors mapped to CSS variables for semantic use */
-            --color-primary-light: #f3f4f6; /* gray-100 */
-            --color-primary: #e5e7eb;       /* gray-200 */
-            --color-secondary: #6b7280;     /* gray-600 */
-            --color-secondary-light: #9ca3af; /* gray-400 */
-            --color-secondary-dark: #374151; /* gray-700 */
-            --color-text-primary: #374151;   /* gray-700 */
-            --color-accent: rgba(107, 114, 128, 0.2); /* gray-600 @ 0.2 */
+            --color-primary-light: #f3f4f6;
+            /* gray-100 */
+            --color-primary: #e5e7eb;
+            /* gray-200 */
+            --color-secondary: #6b7280;
+            /* gray-600 */
+            --color-secondary-light: #9ca3af;
+            /* gray-400 */
+            --color-secondary-dark: #374151;
+            /* gray-700 */
+            --color-text-primary: #374151;
+            /* gray-700 */
+            --color-accent: rgba(107, 114, 128, 0.2);
+            /* gray-600 @ 0.2 */
 
             /* RGB components for alpha compositions */
-            --color-primary-light-rgb: 243, 244, 246; /* gray-100 */
-            --color-primary-rgb: 229, 231, 235;       /* gray-200 */
-            --color-secondary-rgb: 107, 114, 128;     /* gray-600 */
-            --color-secondary-light-rgb: 156, 163, 175; /* gray-400 */
-            --color-secondary-dark-rgb: 55, 65, 81;   /* gray-700 */
-            --color-text-primary-rgb: 55, 65, 81;     /* gray-700 */
-            --color-accent-rgb: 107, 114, 128;        /* gray-600 */
+            --color-primary-light-rgb: 243, 244, 246;
+            /* gray-100 */
+            --color-primary-rgb: 229, 231, 235;
+            /* gray-200 */
+            --color-secondary-rgb: 107, 114, 128;
+            /* gray-600 */
+            --color-secondary-light-rgb: 156, 163, 175;
+            /* gray-400 */
+            --color-secondary-dark-rgb: 55, 65, 81;
+            /* gray-700 */
+            --color-text-primary-rgb: 55, 65, 81;
+            /* gray-700 */
+            --color-accent-rgb: 107, 114, 128;
+            /* gray-600 */
 
             /* Neutrals */
             --color-white: #ffffff;
@@ -163,13 +178,13 @@
             }
 
             .back-layer .square {
-                width: clamp(140px, 35vw, 280px);
-                height: clamp(140px, 35vw, 280px);
+                width: clamp(160px, 42vw, 320px);
+                height: clamp(160px, 42vw, 320px);
             }
 
             .front-layer .square {
-                width: clamp(90px, 28vw, 200px);
-                height: clamp(90px, 28vw, 200px);
+                width: clamp(110px, 34vw, 240px);
+                height: clamp(110px, 34vw, 240px);
             }
         }
 
@@ -510,8 +525,7 @@
     </style>
 </head>
 
-<body class="font-montserrat overflow-x-hidden relative text-text-primary"
-    :class="{'no-scroll': showModal}">
+<body class="font-montserrat overflow-x-hidden relative text-text-primary" :class="{'no-scroll': showModal}">
     <div class="parallax-container">
         <div class="parallax-layer back-layer z-10" data-speed="0.15"></div>
         <div class="parallax-layer front-layer z-20" data-speed="0.2"></div>
@@ -553,7 +567,6 @@
             <div class="container mx-auto px-6 text-center">
                 <div class="w-full overflow-hidden mb-8">
                     <img src="https://media-public.canva.com/FnqPo/MAEqEXFnqPo/1/tl.png" alt=""
-
                         class="block w-full h-full object-cover filter grayscale" aria-hidden="true" />
 
                 </div>
@@ -583,7 +596,6 @@
                 <!-- Bottom section (divider flipped) -->
                 <div class="w-full overflow-hidden mt-8">
                     <img src="https://media-public.canva.com/FnqPo/MAEqEXFnqPo/1/tl.png" alt=""
-
                         class="block w-full h-full object-cover rotate-180 filter grayscale" aria-hidden="true" />
 
                 </div>
@@ -603,7 +615,7 @@
                     </p>
                 </div>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8">
+                <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8">
                     <!-- Card 1 -->
                     <div data-aos="fade-right"
                         class="bg-white/70 backdrop-blur-[10px] rounded-xl shadow-lg overflow-hidden flex flex-col">
@@ -796,8 +808,7 @@
                                 Semua ucapan disimpan di perangkat Anda (localStorage).
                             </div>
                             <div class="flex gap-3">
-                                <button type="submit"
-                                    class="px-4 py-2 rounded bg-primary text-white font-semibold">
+                                <button type="submit" class="px-4 py-2 rounded bg-primary text-white font-semibold">
                                     Kirim
                                 </button>
                             </div>
