--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
     <link rel="icon" href="https://picsum.photos/32/32" />
 
     <!-- Supabase (optional) - set these to enable cloud storage -->
-    <meta name="supabase-url" content="" />
-    <meta name="supabase-anon-key" content="" />
+    <meta
+      name="supabase-url"
+      content="https://fnumtldvzzcldzuevnhd.supabase.co"
+    />
+    <meta
+      name="supabase-anon-key"
+      content="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZudW10bGR2enpjbGR6dWV2bmhkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAwMzgwMTMsImV4cCI6MjA3NTYxNDAxM30.5QyP3aLMTnk3WXrxif3ufqBWWv4QXEPoL68gGCCbJkE"
+    />
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -785,11 +791,15 @@
           </div>
           <!-- Shared parents info (moved from individual cards) -->
           <div class="mt-6 sm:mt-8" data-aos="fade-up">
-            <div class="bg-white/60 backdrop-blur-[10px] rounded-xl shadow p-4 sm:p-6 text-gray-700">
+            <div
+              class="bg-white/60 backdrop-blur-[10px] rounded-xl shadow p-4 sm:p-6 text-gray-700"
+            >
               <p class="text-sm sm:text-base font-medium">
                 <strong>Putra Putri dari:</strong>
               </p>
-              <div class="mt-2 grid grid-cols-1 sm:grid-cols-2 gap-2 text-sm text-gray-600">
+              <div
+                class="mt-2 grid grid-cols-1 sm:grid-cols-2 gap-2 text-sm text-gray-600"
+              >
                 <div>I Dewa Nyoman Artawa &amp; Sang Ayu Putu Kartini</div>
                 <div>I Dewa Ketut Swabawa &amp; I Dewa Ayu Sinthya Dewi</div>
                 <div>I Made Sudarma &amp; Ni Ketut Rahayu</div>
@@ -981,7 +991,10 @@
               Ucapan & Doa Restu
             </h3>
             <!-- Scroll container for comments (no nested scrolling) -->
-            <div class="comments-container" :class="{'scrollable': comments.length > 4}">
+            <div
+              class="comments-container"
+              :class="{'scrollable': comments.length > 4}"
+            >
               <div class="space-y-4">
                 <template
                   x-for="comment in comments.slice().reverse()"
@@ -1265,13 +1278,18 @@
             try {
               const url = document
                 .querySelector('meta[name="supabase-url"]')
-                ?.getAttribute('content')
+                ?.getAttribute("content")
                 ?.trim();
               const anonKey = document
                 .querySelector('meta[name="supabase-anon-key"]')
-                ?.getAttribute('content')
+                ?.getAttribute("content")
                 ?.trim();
-              if (url && anonKey && window.supabase && window.supabase.createClient) {
+              if (
+                url &&
+                anonKey &&
+                window.supabase &&
+                window.supabase.createClient
+              ) {
                 this.supabase = window.supabase.createClient(url, anonKey);
                 this.supabaseReady = true;
               }
@@ -1403,7 +1421,7 @@
             const newComment = {
               name: this.commentForm.name,
               message: this.commentForm.message,
-              attendance: this.commentForm.attendance || 'Belum Tahu',
+              attendance: this.commentForm.attendance || "Belum Tahu",
               time: new Date().toISOString(),
             };
 
@@ -1425,14 +1443,17 @@
             if (this.supabase) {
               try {
                 const { data, error } = await this.supabase
-                  .from('comments')
-                  .select('*')
-                  .order('time', { ascending: true });
+                  .from("pesan") // Changed from 'comments' to 'pesan'
+                  .select("*")
+                  .order("time", { ascending: true });
                 if (!error && Array.isArray(data)) {
                   this.comments = data;
                   // keep a local cache for offline
                   try {
-                    localStorage.setItem('metatah_comments_v1', JSON.stringify(this.comments));
+                    localStorage.setItem(
+                      "metatah_pesan_v1",
+                      JSON.stringify(this.comments)
+                    );
                   } catch (_) {}
                   return;
                 }
@@ -1442,7 +1463,8 @@
             }
             // Fallback: load from localStorage
             try {
-              this.comments = JSON.parse(localStorage.getItem('metatah_comments_v1')) || [];
+              this.comments =
+                JSON.parse(localStorage.getItem("metatah_pesan_v1")) || [];
             } catch (_) {
               this.comments = [];
             }
@@ -1451,7 +1473,10 @@
           async saveComments() {
             // always keep offline copy
             try {
-              localStorage.setItem('metatah_comments_v1', JSON.stringify(this.comments));
+              localStorage.setItem(
+                "metatah_pesan_v1",
+                JSON.stringify(this.comments)
+              );
             } catch (_) {}
 
             // if supabase configured, insert the latest comment
@@ -1459,7 +1484,7 @@
               const latest = this.comments[this.comments.length - 1];
               if (latest) {
                 try {
-                  await this.supabase.from('comments').insert([latest]);
+                  await this.supabase.from("pesan").insert([latest]); // Changed from 'comments' to 'pesan'
                 } catch (_) {
                   // ignore errors; offline-first
                 }
