--- a/index.html
+++ b/index.html
@@ -792,18 +792,21 @@
           <!-- Shared parents info (moved from individual cards) -->
           <div class="mt-6 sm:mt-8" data-aos="fade-up">
             <div
-              class="bg-white/60 backdrop-blur-[10px] rounded-xl shadow p-4 sm:p-6 text-gray-700"
+              class="bg-white/60 backdrop-blur-[10px] rounded-xl shadow p-4 sm:p-6 text-gray-700 text-center"
             >
-              <p class="text-sm sm:text-base font-medium">
-                <strong>Putra Putri dari:</strong>
-              </p>
-              <div
-                class="mt-2 grid grid-cols-1 sm:grid-cols-2 gap-2 text-sm text-gray-600"
-              >
-                <div>I Dewa Nyoman Artawa &amp; Sang Ayu Putu Kartini</div>
-                <div>I Dewa Ketut Swabawa &amp; I Dewa Ayu Sinthya Dewi</div>
-                <div>I Made Sudarma &amp; Ni Ketut Rahayu</div>
-                <div>I Gusti Made Yasa &amp; I Gusti Ayu Mirah Dewi</div>
+              <p class="text-sm sm:text-base font-medium">Putra Putri dari:</p>
+              <div class="mt-3 space-y-3 sm:space-y-4 text-gray-600">
+                <div
+                  class="flex flex-col md:flex-row justify-center items-center md:gap-8"
+                >
+                  <div class="text-lg sm:text-xl">I Dewa Nyoman Artawa</div>
+                  <div
+                    class="text-secondary-dark text-6xl sm:text-7xl md:text-8xl leading-none font-mrsdelafield"
+                  >
+                    &amp;
+                  </div>
+                  <div class="text-lg sm:text-xl">Sang Ayu Putu Kartini</div>
+                </div>
               </div>
             </div>
           </div>
