--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
           <!-- Shared parents info (moved from individual cards) -->
           <div class="mt-6 sm:mt-8" data-aos="fade-up">
             <div
-              class="bg-white/60 backdrop-blur-[10px] rounded-xl shadow p-4 sm:p-6 text-gray-700 text-center"
+              class="bg-[#e0d8c3]/80 rounded-xl shadow p-4 sm:p-6 text-gray-700 text-center"
             >
               <p class="text-sm sm:text-base font-medium">Putra Putri dari:</p>
               <div class="mt-3 space-y-3 sm:space-y-4 text-gray-600">
