--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
           <div class="box" data-aos="zoom-in">
             <div class="box-inner">
               <div
-                class="grid grid-cols-2 md:grid-cols-3 gap-6 text-center mb-8"
+                class="grid grid-cols-1 md:grid-cols-3 md:gap-6 text-center mb-8"
               >
                 <div class="p-4">
                   <div class="text-sm text-gray-500">Hari</div>
@@ -870,9 +870,9 @@
                   <div class="text-4xl font-bold text-secondary-dark mt-1">
                     24
                   </div>
-                  <div class="text-sm mt-1">Oktober 2025</div>
+                  <div class="text-md font-bold mt-1">Oktober 2025</div>
                 </div>
-                <div class="p-4 col-span-2 md:col-span-1">
+                <div class="p-4">
                   <div class="text-sm text-gray-500">Waktu</div>
                   <div class="text-xl font-bold mt-2">10:00 - 16:00 WITA</div>
                 </div>
@@ -884,7 +884,7 @@
                   Hitung Mundur Acara
                 </h3>
                 <div class="flex justify-center gap-2 sm:gap-4 flex-nowrap">
-                  <div class="countdown-item text-white text-center">
+                  <div class="countdown-item text-gray-500 text-center">
                     <div
                       class="text-2xl sm:text-3xl font-bold"
                       x-text="countdown.days"
@@ -893,7 +893,7 @@
                     </div>
                     <div class="text-xs sm:text-sm">Hari</div>
                   </div>
-                  <div class="countdown-item text-white text-center">
+                  <div class="countdown-item text-gray-500 text-center">
                     <div
                       class="text-2xl sm:text-3xl font-bold"
                       x-text="countdown.hours"
@@ -902,7 +902,7 @@
                     </div>
                     <div class="text-xs sm:text-sm">Jam</div>
                   </div>
-                  <div class="countdown-item text-white text-center">
+                  <div class="countdown-item text-gray-500 text-center">
                     <div
                       class="text-2xl sm:text-3xl font-bold"
                       x-text="countdown.minutes"
@@ -911,7 +911,7 @@
                     </div>
                     <div class="text-xs sm:text-sm">Menit</div>
                   </div>
-                  <div class="countdown-item text-white text-center">
+                  <div class="countdown-item text-gray-500 text-center">
                     <div
                       class="text-2xl sm:text-3xl font-bold"
                       x-text="countdown.seconds"
@@ -944,10 +944,9 @@
                   <a
                     href="https://maps.app.goo.gl/JyZneH9gKBugatr78"
                     target="_blank"
-                    class="inline-flex items-center gap-2 px-4 py-2 rounded-full border border-gray-300 hover:bg-gray-50"
+                    class="bg-[#E0D6BD] text-gray-700 inline-flex items-center gap-2 px-4 py-2 rounded-full border border-gray-300 hover:bg-gray-50"
                   >
-                    <i class="fas fa-map-marker-alt text-secondary"></i> Buka di
-                    Google Maps
+                    <i class="fas fa-map-marker-alt"></i> Buka di Google Maps
                   </a>
                 </div>
               </div>
@@ -957,7 +956,7 @@
       </section>
 
       <!-- UCAPAN -->
-      <section id="ucapan" class="py-16">
+      <section id="ucapan" class="pb-16">
         <div class="container mx-auto px-6 mb-12">
           <div class="text-center mb-8" data-aos="fade-up">
             <blockquote
@@ -1095,13 +1094,11 @@
             >
               Galeri
             </h2>
-            <p class="text-gray-600">Foto-foto keluarga dan persiapan.</p>
+            <p class="text-gray-600">Foto-foto keluarga dan persiapan</p>
           </div>
 
           <!-- Smooth Scrolling Gallery -->
-          <div
-            class="relative overflow-hidden py-10 sm:py-16 mx-[-1.25rem] sm:mx-[-2rem]"
-          >
+          <div class="relative overflow-hidden mx-[-1.25rem] sm:mx-[-2rem]">
             <div class="fade-left"></div>
             <div class="fade-right"></div>
 
