--- a/index.html
+++ b/index.html
@@ -728,100 +728,91 @@
           </div>
 
           <div
-            class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8"
+            class="grid grid-cols-2 grid-rows-2 gap-4 lg:grid-cols-4 lg:grid-rows-1"
           >
-            <!-- Card 1 -->
-            <div
-              data-aos="fade-right"
-              class="bg-white/70 backdrop-blur-[10px] rounded-xl shadow-lg overflow-hidden flex flex-col"
-            >
-              <img
-                src="https://picsum.photos/400/400"
-                alt="Putri 1"
-                class="aspect-square object-cover w-full"
-              />
-              <div class="p-6 flex-1 flex flex-col justify-between">
-                <div>
-                  <h3
-                    class="text-xl font-semibold mb-2 text-secondary-dark font-playfair"
+            <!-- Card -->
+            <div class="relative overflow-hidden rounded-xl shadow-lg">
+              <div class="aspect-square lg:aspect-[3/4] relative">
+                <img
+                  src="https://picsum.photos/600/800?random=1"
+                  alt="Luh Mas Tia Andriani"
+                  class="w-full h-full object-cover"
+                />
+                <div
+                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-6"
+                >
+                  <p
+                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
                   >
                     Luh Mas Tia Andriani
-                  </h3>
-                  <!-- parent info moved to shared section below -->
+                  </p>
                 </div>
               </div>
             </div>
 
-            <!-- Card 2 -->
-            <div
-              data-aos="fade-left"
-              class="bg-white/70 backdrop-blur-[10px] rounded-xl shadow-lg overflow-hidden flex flex-col"
-            >
-              <img
-                src="https://picsum.photos/400/401"
-                alt="Putra 1"
-                class="aspect-square object-cover w-full"
-              />
-              <div class="p-6 flex-1 flex flex-col justify-between">
-                <div>
-                  <h3
-                    class="text-xl font-semibold mb-2 text-secondary-dark font-playfair"
+            <!-- Repeat for others -->
+            <div class="relative overflow-hidden rounded-xl shadow-lg">
+              <div class="aspect-square lg:aspect-[3/4] relative">
+                <img
+                  src="https://picsum.photos/600/800?random=2"
+                  alt="Ni Kadek Mas Ita Andriantini"
+                  class="w-full h-full object-cover"
+                />
+                <div
+                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-6"
+                >
+                  <p
+                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
                   >
                     Ni Kadek Mas Ita Andriantini
-                  </h3>
-                  <!-- parent info moved to shared section below -->
+                  </p>
                 </div>
               </div>
             </div>
 
-            <!-- Card 3 -->
-            <div
-              data-aos="fade-right"
-              class="bg-white/70 backdrop-blur-[10px] rounded-xl shadow-lg overflow-hidden flex flex-col"
-            >
-              <img
-                src="https://picsum.photos/400/402"
-                alt="Putri 2"
-                class="aspect-square object-cover w-full"
-              />
-              <div class="p-6 flex-1 flex flex-col justify-between">
-                <div>
-                  <h3
-                    class="text-xl font-semibold mb-2 text-secondary-dark font-playfair"
+            <div class="relative overflow-hidden rounded-xl shadow-lg">
+              <div class="aspect-square lg:aspect-[3/4] relative">
+                <img
+                  src="https://picsum.photos/600/800?random=3"
+                  alt="Komang Mas Eti Andriantina"
+                  class="w-full h-full object-cover"
+                />
+                <div
+                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-6"
+                >
+                  <p
+                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
                   >
                     Komang Mas Eti Andriantina
-                  </h3>
-                  <!-- parent info moved to shared section below -->
+                  </p>
                 </div>
               </div>
             </div>
 
-            <!-- Card 4 -->
-            <div
-              data-aos="fade-left"
-              class="bg-white/70 backdrop-blur-[10px] rounded-xl shadow-lg overflow-hidden flex flex-col"
-            >
-              <img
-                src="https://picsum.photos/400/403"
-                alt="Putra 2"
-                class="aspect-square object-cover w-full"
-              />
-              <div class="p-6 flex-1 flex flex-col justify-between">
-                <div>
-                  <h3
-                    class="text-xl font-semibold mb-2 text-secondary-dark font-playfair"
+            <div class="relative overflow-hidden rounded-xl shadow-lg">
+              <div class="aspect-square lg:aspect-[3/4] relative">
+                <img
+                  src="https://picsum.photos/600/800?random=4"
+                  alt="Ketut Mas Tyo Teja Adriana"
+                  class="w-full h-full object-cover"
+                />
+                <div
+                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-6"
+                >
+                  <p
+                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
                   >
                     Ketut Mas Tyo Teja Adriana
-                  </h3>
-                  <!-- parent info moved to shared section below -->
+                  </p>
                 </div>
               </div>
             </div>
           </div>
+
           <!-- Shared parents info (moved from individual cards) -->
           <div class="mt-6 sm:mt-8" data-aos="fade-up">
             <div
-              class="bg-[#e0d8c3]/40 backdrop-blur-sm rounded-xl shadow p-4 sm:p-6 text-gray-700 text-center"
+              class="bg-white/80 backdrop-blur-sm rounded-xl shadow p-4 sm:p-6 text-gray-700 text-center"
             >
               <p class="text-sm sm:text-base font-medium">Putra Putri dari:</p>
               <div class="mt-3 space-y-3 sm:space-y-4 text-gray-600">
