--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
                   class="w-full h-full object-cover"
                 />
                 <div
-                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-6"
+                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
                   <p
                     class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
@@ -759,7 +759,7 @@
                   class="w-full h-full object-cover"
                 />
                 <div
-                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-6"
+                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
                   <p
                     class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
@@ -778,7 +778,7 @@
                   class="w-full h-full object-cover"
                 />
                 <div
-                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-6"
+                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
                   <p
                     class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
@@ -797,7 +797,7 @@
                   class="w-full h-full object-cover"
                 />
                 <div
-                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-6"
+                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
                   <p
                     class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
