--- a/index.html
+++ b/index.html
@@ -1665,5 +1665,22 @@
         };
       }
     </script>
+
+    <!-- FOOTER -->
+    <footer class="bg-white/20 backdrop-blur-sm py-6 text-center">
+      <div class="container mx-auto px-6">
+        <p class="text-gray-600 text-sm">
+          Made with <span class="text-red-500">❤</span> by 
+          <a 
+            href="https://www.instagram.com/dwpyn" 
+            target="_blank" 
+            rel="noopener noreferrer"
+            class="text-secondary-dark font-semibold hover:text-secondary transition-colors duration-200"
+          >
+            @dwpyn
+          </a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
