--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
     <div
       id="mainContent"
       :class="{'blur-content': showModal}"
-      class="relative z-[10] px-5 pb-24 max-w-[700px] mx-auto text-center"
+      class="relative z-[10] px-5 max-w-[700px] mx-auto text-center"
     >
       <!-- HERO -->
       <header
@@ -1667,7 +1667,7 @@
     </script>
 
     <!-- FOOTER -->
-<footer class="bg-white/20 backdrop-blur-sm h-24 flex items-center justify-center text-center">
+<footer class="bg-white/20 backdrop-blur-sm h-24 mb-12 flex items-center justify-center text-center">
   <div class="container mx-auto px-6">
     <p class="text-gray-600 text-sm">
       Made with <span class="text-red-500">❤</span> by 
