--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@
       function invitationApp() {
         return {
           showModal: true,
-          isPlaying: false,
+          isPlaying: true,
           showLightbox: false,
           currentImageIndex: 0,
           // Background slideshow state for opening modal
