--- a/index.html
+++ b/index.html
@@ -1673,8 +1673,8 @@
       }
     </script>
 
-    <!-- FOOTER -->
-<footer class="bg-white/20 backdrop-blur-sm h-24 mb-12 flex items-center justify-center text-center">
+<!-- FOOTER -->
+<footer class="bg-white/20 backdrop-blur-sm h-24 mb-12 flex items-center justify-center text-center relative z-50 pb-20">
   <div class="container mx-auto px-6">
     <p class="text-gray-600 text-sm">
       Made with <span class="text-red-500">❤</span> by 
