--- a/index.html
+++ b/index.html
@@ -318,27 +318,6 @@
         height: 66%;
       }
 
-      /* Add curve at the bottom of the accent section */
-      .full-width-accent::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        width: 100%;
-        height: 100px;
-        overflow: hidden;
-      }
-
-      .full-width-accent::after::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 200%;
-        background: var(--color-primary-light);
-        border-radius: 0 0 50% 50%;
-      }
-
       /* Gallery Styles - Fixed for perfect infinite loop */
       .gallery-track {
         display: flex;
@@ -1428,7 +1407,7 @@
             window.scrollTo({ top: 0, behavior: "smooth" });
             this.$nextTick(() => {
               if (window.AOS && AOS.refresh) AOS.refresh();
-              
+
               // Start playing music when invitation is opened
               const audioPlayer = this.$refs.audioPlayer;
               if (audioPlayer) {
@@ -1673,21 +1652,23 @@
       }
     </script>
 
-<!-- FOOTER -->
-<footer class="bg-white/20 backdrop-blur-sm h-24 mb-12 flex items-center justify-center text-center relative pt-8 pb-20">
-  <div class="container mx-auto px-6">
-    <p class="text-gray-600 text-sm">
-      Made with <span class="text-red-500">❤</span> by 
-      <a 
-        href="https://www.instagram.com/dwpyn" 
-        target="_blank" 
-        rel="noopener noreferrer"
-        class="text-secondary-dark font-semibold hover:text-secondary transition-colors duration-200"
-      >
-        @dwpyn
-      </a>
-    </p>
-  </div>
-</footer>
+    <!-- FOOTER -->
+    <footer
+      class="bg-white/20 backdrop-blur-sm h-24 mb-12 flex items-center justify-center text-center relative pt-8 pb-20"
+    >
+      <div class="container mx-auto px-6">
+        <p class="text-gray-600 text-sm">
+          Made with <span class="text-red-500">❤</span> by
+          <a
+            href="https://www.instagram.com/dwpyn"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="text-secondary-dark font-semibold hover:text-secondary transition-colors duration-200"
+          >
+            @dwpyn
+          </a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
