--- a/index.html
+++ b/index.html
@@ -198,6 +198,53 @@
         transform: none;
       }
 
+      /* Waving animation for parallax elements - FASTER */
+      @keyframes wave {
+        0%, 100% {
+          transform: translateY(0) rotate(0deg);
+        }
+        25% {
+          transform: translateY(-15px) rotate(3deg);
+        }
+        50% {
+          transform: translateY(0) rotate(0deg);
+        }
+        75% {
+          transform: translateY(15px) rotate(-3deg);
+        }
+      }
+
+      @keyframes wave-reverse {
+        0%, 100% {
+          transform: translateY(0) rotate(0deg);
+        }
+        25% {
+          transform: translateY(15px) rotate(-3deg);
+        }
+        50% {
+          transform: translateY(0) rotate(0deg);
+        }
+        75% {
+          transform: translateY(-15px) rotate(3deg);
+        }
+      }
+
+      .back-layer .square-left {
+        animation: wave 6s ease-in-out infinite;
+      }
+
+      .back-layer .square-right {
+        animation: wave-reverse 7s ease-in-out infinite;
+      }
+
+      .front-layer .square-left {
+        animation: wave-reverse 5s ease-in-out infinite;
+      }
+
+      .front-layer .square-right {
+        animation: wave 5.5s ease-in-out infinite;
+      }
+
       @media (max-width: 768px) {
         .square-left {
           left: -15vw;
