--- a/index.html
+++ b/index.html
@@ -198,53 +198,6 @@
         transform: none;
       }
 
-      /* Waving animation for parallax elements - FASTER */
-      @keyframes wave {
-        0%, 100% {
-          transform: translateY(0) rotate(0deg);
-        }
-        25% {
-          transform: translateY(-15px) rotate(3deg);
-        }
-        50% {
-          transform: translateY(0) rotate(0deg);
-        }
-        75% {
-          transform: translateY(15px) rotate(-3deg);
-        }
-      }
-
-      @keyframes wave-reverse {
-        0%, 100% {
-          transform: translateY(0) rotate(0deg);
-        }
-        25% {
-          transform: translateY(15px) rotate(-3deg);
-        }
-        50% {
-          transform: translateY(0) rotate(0deg);
-        }
-        75% {
-          transform: translateY(-15px) rotate(3deg);
-        }
-      }
-
-      .back-layer .square-left {
-        animation: wave 6s ease-in-out infinite;
-      }
-
-      .back-layer .square-right {
-        animation: wave-reverse 7s ease-in-out infinite;
-      }
-
-      .front-layer .square-left {
-        animation: wave-reverse 5s ease-in-out infinite;
-      }
-
-      .front-layer .square-right {
-        animation: wave 5.5s ease-in-out infinite;
-      }
-
       @media (max-width: 768px) {
         .square-left {
           left: -15vw;
@@ -767,9 +720,7 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p
-                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
-                  >
+                  <p class="text-xl text-gray-800 tracking-wide text-center">
                     Luh Mas Tia Andriani
                   </p>
                 </div>
@@ -787,9 +738,7 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p
-                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
-                  >
+                  <p class="text-xl text-gray-800 tracking-wide text-center">
                     Ni Kadek Mas Ita Andriantini
                   </p>
                 </div>
@@ -806,9 +755,7 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p
-                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
-                  >
+                  <p class="text-xl text-gray-800 tracking-wide text-center">
                     Komang Mas Eti Andriantina
                   </p>
                 </div>
@@ -825,9 +772,7 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p
-                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
-                  >
+                  <p class="text-xl text-gray-800 tracking-wide text-center">
                     Ketut Mas Tyo Teja Adriana
                   </p>
                 </div>
