--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;500&family=Ysabeau+Infant:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
@@ -72,6 +72,7 @@
               playfair: ["Playfair Display", "serif"],
               montserrat: ["Montserrat", "sans-serif"],
               mrsdelafield: ['"Mrs Saint Delafield"', "cursive"],
+              ysabeau: ['"Ysabeau Infant"', "sans-serif"],
             },
             colors: {
               "primary-light": "#f3f4f6", // gray-100
@@ -720,7 +721,7 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p class="text-xl text-gray-800 tracking-wide text-center">
+                  <p class="text-xl text-gray-800 tracking-wide text-center font-ysabeau font-medium">
                     Luh Mas Tia Andriani
                   </p>
                 </div>
@@ -738,7 +739,7 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p class="text-xl text-gray-800 tracking-wide text-center">
+                  <p class="text-xl text-gray-800 tracking-wide text-center font-ysabeau font-medium">
                     Ni Kadek Mas Ita Andriantini
                   </p>
                 </div>
@@ -755,7 +756,7 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p class="text-xl text-gray-800 tracking-wide text-center">
+                  <p class="text-xl text-gray-800 tracking-wide text-center font-ysabeau font-medium">
                     Komang Mas Eti Andriantina
                   </p>
                 </div>
@@ -772,7 +773,7 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p class="text-xl text-gray-800 tracking-wide text-center">
+                  <p class="text-xl text-gray-800 tracking-wide text-center font-ysabeau font-medium">
                     Ketut Mas Tyo Teja Adriana
                   </p>
                 </div>
@@ -790,13 +791,13 @@
                 <div
                   class="flex flex-col md:flex-row justify-center items-center md:gap-8"
                 >
-                  <div class="text-lg sm:text-xl">I Nyoman Sumanasa</div>
+                  <div class="text-lg sm:text-xl font-ysabeau font-medium">I Nyoman Sumanasa</div>
                   <div
                     class="text-secondary-dark text-6xl sm:text-7xl md:text-8xl leading-none font-mrsdelafield"
                   >
                     &amp;
                   </div>
-                  <div class="text-lg sm:text-xl">Ketut Santi Purnami</div>
+                  <div class="text-lg sm:text-xl font-ysabeau font-medium">Ketut Santi Purnami</div>
                 </div>
               </div>
             </div>
