--- a/index.html
+++ b/index.html
@@ -773,7 +773,10 @@
             >
               <!-- Card -->
               <div class="relative overflow-hidden rounded-xl shadow-lg">
-                <div class="aspect-square lg:aspect-[3/4] relative">
+                <div
+                  class="aspect-square lg:aspect-[3/4] relative"
+                  data-aos="fade-up"
+                >
                   <img
                     src="https://picsum.photos/600/800?random=1"
                     alt="Luh Mas Tia Andriani"
@@ -792,7 +795,11 @@
               </div>
 
               <!-- Repeat for others -->
-              <div class="relative overflow-hidden rounded-xl shadow-lg">
+              <div
+                data-aos="fade-up"
+                data-aos-delay="100"
+                class="relative overflow-hidden rounded-xl shadow-lg"
+              >
                 <div class="aspect-square lg:aspect-[3/4] relative">
                   <img
                     src="https://picsum.photos/600/800?random=2"
@@ -811,7 +818,11 @@
                 </div>
               </div>
 
-              <div class="relative overflow-hidden rounded-xl shadow-lg">
+              <div
+                data-aos="fade-up"
+                data-aos-delay="200"
+                class="relative overflow-hidden rounded-xl shadow-lg"
+              >
                 <div class="aspect-square lg:aspect-[3/4] relative">
                   <img
                     src="https://picsum.photos/600/800?random=3"
@@ -830,7 +841,11 @@
                 </div>
               </div>
 
-              <div class="relative overflow-hidden rounded-xl shadow-lg">
+              <div
+                data-aos="fade-up"
+                data-aos-delay="300"
+                class="relative overflow-hidden rounded-xl shadow-lg"
+              >
                 <div class="aspect-square lg:aspect-[3/4] relative">
                   <img
                     src="https://picsum.photos/600/800?random=4"
