--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta property="og:image" content="https://picsum.photos/1200/630" />
     <meta name="theme-color" content="#f3f4f6" />
-    <link rel="icon" href="https://picsum.photos/32/32" />
+    <link rel="icon" href="svgviewer-output.svg" />
 
     <!-- Supabase (optional) - set these to enable cloud storage -->
     <meta
