--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta property="og:image" content="https://picsum.photos/1200/630" />
     <meta name="theme-color" content="#f3f4f6" />
-    <link rel="icon" href="svgviewer-output.svg" />
+    <link rel="icon" href="https://picsum.photos/32/32" />
 
     <!-- Supabase (optional) - set these to enable cloud storage -->
     <meta
@@ -866,10 +866,8 @@
             </div>
 
             <!-- Shared parents info (moved from individual cards) -->
-            <div class="mt-6 sm:mt-8" data-aos="fade-up">
-              <div
-                class="bg-white/80 backdrop-blur-sm rounded-xl shadow p-4 sm:p-6 text-gray-700 text-center"
-              >
+            <div class="mt-6 sm:mt-8 box" data-aos="fade-up">
+              <div class="box-inner p-4 sm:p-6 text-gray-700 text-center">
                 <p class="text-sm sm:text-base">Putra Putri dari:</p>
                 <div class="mt-3 space-y-3 sm:space-y-4 text-gray-600">
                   <div
