--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
               perkenankan kami mengundang Bapak/Ibu/Saudara/i hadir memberikan
               doa restu.
             </p>
-            <div class="mt-6 flex flex-row justify-center gap-3">
+            <!-- <div class="mt-6 flex flex-row justify-center gap-3">
               <a
                 href="#info"
                 class="inline-flex items-center justify-center px-6 py-3 text-sm sm:text-base bg-[#E0D6BD] text-gray-700 rounded-full shadow hover:brightness-[1.05] transform whitespace-nowrap"
@@ -738,7 +738,7 @@
                 class="inline-flex items-center justify-center px-6 py-3 text-sm sm:text-base border border-gray-300 rounded-full text-gray-700 hover:bg-gray-50 whitespace-nowrap"
                 >Kirim Ucapan</a
               >
-            </div>
+            </div> -->
           </div>
 
           <!-- Bottom section (divider flipped) -->
