--- a/index.html
+++ b/index.html
@@ -1015,11 +1015,9 @@
             <blockquote
               class="text-xl italic border-l-4 border-primary pl-4 py-2 mx-auto max-w-2xl"
             >
-              "Dengan Yadnya, semoga kami memperoleh sifat-sifat kemuliaan,
-              kejayaan, kekuatan rohani, kekuatan jasmani, kesejahteraan dan
-              perlindungan"
+              "Om Ano Badrah Kretavo Yantu Visvatah" </br> "Semoga pikiran baik datang dari segala penjuru"
               <footer class="text-right mt-2 text-gray-600">
-                — (Yajurweda XV.113)
+               <i class="fa fa-book" aria-hidden="true"></i> Yajurweda XV.113
               </footer>
             </blockquote>
           </div>
