--- a/index.html
+++ b/index.html
@@ -1317,6 +1317,18 @@
             "assets/gallery/10.jpg",
             "assets/gallery/11.jpg",
             "assets/gallery/12.jpg",
+            "assets/gallery/13.jpg",
+            "assets/gallery/14.jpg",
+            "assets/gallery/15.jpg",
+            "assets/gallery/16.jpg",
+            "assets/gallery/17.jpg",
+            "assets/gallery/18.jpg",
+            "assets/gallery/19.jpg",
+            "assets/gallery/20.jpg",
+            "assets/gallery/21.jpg",
+            "assets/gallery/22.jpg",
+            "assets/gallery/23.jpg",
+            "assets/gallery/24.jpg",
           ],
 
           init() {
