--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
       style="display: none"
       aria-hidden="true"
     >
-      <template x-for="image in modalImages" :key="'modalbg-'+image">
+      <template x-for="image in galleryImages" :key="'modalbg-'+image">
         <img
           :src="image"
           alt=""
