--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
                   data-aos="fade-up"
                 >
                   <img
-                    src="assets/mempelai/1.jpg"
+                    src="assets/mempelai/tia.jpg"
                     alt="Luh Mas Tia Andriani"
                     class="w-full h-full object-cover"
                     onerror="this.onerror=null; this.src='https://picsum.photos/600/800?random=1'"
@@ -804,7 +804,7 @@
               >
                 <div class="aspect-square lg:aspect-[3/4] relative">
                   <img
-                    src="assets/mempelai/2.jpg"
+                    src="assets/mempelai/ita.jpg"
                     alt="Ni Kadek Mas Ita Andriantini"
                     class="w-full h-full object-cover"
                     onerror="this.onerror=null; this.src='https://picsum.photos/600/800?random=2'"
@@ -828,7 +828,7 @@
               >
                 <div class="aspect-square lg:aspect-[3/4] relative">
                   <img
-                    src="assets/mempelai/3.jpg"
+                    src="assets/mempelai/eti.jpg"
                     alt="Komang Mas Eti Andriantina"
                     class="w-full h-full object-cover"
                     onerror="this.onerror=null; this.src='https://picsum.photos/600/800?random=3'"
@@ -852,7 +852,7 @@
               >
                 <div class="aspect-square lg:aspect-[3/4] relative">
                   <img
-                    src="assets/mempelai/4.jpg"
+                    src="assets/mempelai/tyo.jpg"
                     alt="Ketut Mas Tyo Teja Adriana"
                     class="w-full h-full object-cover"
                     onerror="this.onerror=null; this.src='https://picsum.photos/600/800?random=4'"
