Change modal margin-top for improved layout
Adjust modal positioning for better visibility on larger screens.

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
       style="display: none"
     >
       <div
-        class="bg-white/40 backdrop-blur-[5px] rounded-2xl shadow-2xl p-6 max-w-md w-full mx-4 text-center mt-[25%]"
+        class="bg-white/40 backdrop-blur-[5px] rounded-2xl shadow-2xl p-6 max-w-md w-full mx-4 text-center mt-[50%] md:mt-[25%]"
       >
         <h2 class="text-4xl font-mrsdelafield text-secondary-dark mb-1">
           Om Swastyastu
