--- a/index.html
+++ b/index.html
@@ -1491,7 +1491,7 @@
             } else {
               square.style.backgroundImage = `url('https://media-public.canva.com/EalrA/MAEchNEalrA/1/tl.png')`;
               square.style.opacity = "0.9";
-              square.style.filter = "grayscale(100%)";
+              square.style.filter = "brightness(0) saturate(100%) invert(95%) sepia(64%) saturate(288%) hue-rotate(320deg) brightness(85%) contrast(85%)";
               square.style.transform = "none";
             }
             square.style.top = `${topPos}%`;
