Update Open Graph image for the invitation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       property="og:description"
       content="Undangan Metatah (Potong Gigi) — undangan online bertema Bali."
     />
-    <meta property="og:image" content="https://picsum.photos/1200/630" />
+    <meta property="og:image" content="assets/gallery/24.jpg" />
     <meta name="theme-color" content="#f3f4f6" />
     <link rel="icon" href="svgviewer-output.svg" />
 
