Update Open Graph image URL in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       property="og:description"
       content="Undangan Metatah (Potong Gigi) — undangan online bertema Bali."
     />
-    <meta property="og:image" content="https://andrianfamily.netlify.app/assets/gallery/24.jpg"  />
+    <meta property="og:image" content="https://opengraph.b-cdn.net/production/images/209a2fed-f310-4d6e-aa2e-6be8928a999a.jpg?token=jl_30nt0WF66VwtnFT_ye9vjudvP0bAOmOcaZrTnQDQ&height=800&width=1200&expires=33297032271"  />
     <meta name="theme-color" content="#f3f4f6" />
     <link rel="icon" href="svgviewer-output.svg" />
 
